# project_styler_py

./: .gitignore  README.md  pyproject.toml  requirements.txt
example/: example.ipynb  example_palette.yaml  example_theme.yaml
project_style_py/: __init__.py  config.py  palettes.py  styling.py
project_style_py/resources/: palettes.yaml  theme.yaml
