[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project_style_py"
version = "0.1.0"
authors = [
  { name="Edoardo Giacopuzzi", email="edoardo.giacopuzzi@efht.org" },
]
description = "Configurable plotting styles for scientific projects in Python."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.0",
    "seaborn>=0.11",
    "pyyaml>=5.0",
    "requests>=2.25",
    "pandas>=1.2",
    "matplotlib-inline>=0.1.5",
    "ipython>=8.12.3",
    "ipykernel>=6.29.5",
]
